--- a/requirements.txt
+++ b/requirements.txt
@@ -1,137 +1,135 @@
-Package                                       Version
---------------------------------------------- -----------
-aiohttp                                       3.9.5
-aiosignal                                     1.3.1
-alembic                                       1.13.1
-altair                                        5.3.0
-aniso8601                                     9.0.1
-annotated-types                               0.7.0
-anyio                                         4.4.0
-async-timeout                                 4.0.3
-attrs                                         23.2.0
-azure-ai-vision-imageanalysis                 1.0.0b2
-azure-cognitiveservices-vision-computervision 0.9.0
-azure-common                                  1.1.28
-azure-core                                    1.30.2
-azure-cosmos                                  4.7.0
-azure-identity                                1.16.1
-azure-search                                  1.0.0b2
-azure-search-documents                        11.4.0
-azure-storage-blob                            12.20.0
-blinker                                       1.8.2
-cachetools                                    5.3.3
-certifi                                       2024.6.2
-cffi                                          1.16.0
-charset-normalizer                            3.3.2
-click                                         8.1.7
-cloudpickle                                   3.0.0
-colorama                                      0.4.6
-contourpy                                     1.2.1
-cryptography                                  42.0.8
-cycler                                        0.12.1
-dataclasses-json                              0.6.7
-Deprecated                                    1.2.14
-distro                                        1.9.0
-docker                                        7.1.0
-entrypoints                                   0.4
-exceptiongroup                                1.2.1
-faiss-cpu                                     1.8.0
-Flask                                         3.0.3
-fonttools                                     4.53.0
-frozenlist                                    1.4.1
-gitdb                                         4.0.11
-GitPython                                     3.1.43
-graphene                                      3.3
-graphql-core                                  3.2.3
-graphql-relay                                 3.2.0
-greenlet                                      3.0.3
-h11                                           0.14.0
-httpcore                                      1.0.5
-httpx                                         0.27.0
-idna                                          3.7
-importlib_metadata                            7.1.0
-isodate                                       0.6.1
-itsdangerous                                  2.2.0
-Jinja2                                        3.1.4
-joblib                                        1.4.2
-jsonpatch                                     1.33
-jsonpointer                                   3.0.0
-jsonschema                                    4.22.0
-jsonschema-specifications                     2023.12.1
-kiwisolver                                    1.4.5
-langchain                                     0.2.3
-langchain-community                           0.2.4
-langchain-core                                0.2.5
-langchain-text-splitters                      0.2.1
-langsmith                                     0.1.77
-Mako                                          1.3.5
-Markdown                                      3.6
-markdown-it-py                                3.0.0
-MarkupSafe                                    2.1.5
-marshmallow                                   3.21.3
-matplotlib                                    3.9.0
-mdurl                                         0.1.2
-mlflow                                        2.13.2
-msal                                          1.28.1
-msal-extensions                               1.1.0
-msrest                                        0.7.1
-multidict                                     6.0.5
-mypy-extensions                               1.0.0
-numpy                                         1.26.4
-oauthlib                                      3.2.2
-openai                                        1.33.0
-opencv-python                                 4.10.0.82
-opentelemetry-api                             1.25.0
-opentelemetry-sdk                             1.25.0
-opentelemetry-semantic-conventions            0.46b0
-orjson                                        3.10.4
-packaging                                     23.2
-pandas                                        2.2.2
-pillow                                        10.3.0
-pip                                           23.0.1
-portalocker                                   2.8.2
-protobuf                                      4.25.3
-pyarrow                                       15.0.2
-pycparser                                     2.22
-pydantic                                      2.7.3
-pydantic_core                                 2.18.4
-pydeck                                        0.9.1
-Pygments                                      2.18.0
-PyJWT                                         2.8.0
-pyparsing                                     3.1.2
-python-dateutil                               2.9.0.post0
-python-dotenv                                 1.0.1
-pytz                                          2024.1
-pywin32                                       306
-PyYAML                                        6.0.1
-querystring-parser                            1.2.4
-referencing                                   0.35.1
-requests                                      2.32.3
-requests-oauthlib                             2.0.0
-rich                                          13.7.1
-rpds-py                                       0.18.1
-scikit-learn                                  1.5.0
-scipy                                         1.13.1
-setuptools                                    65.5.0
-six                                           1.16.0
-smmap                                         5.0.1
-sniffio                                       1.3.1
-SQLAlchemy                                    2.0.30
-sqlparse                                      0.5.0
-streamlit                                     1.35.0
-tenacity                                      8.3.0
-threadpoolctl                                 3.5.0
-toml                                          0.10.2
-toolz                                         0.12.1
-tornado                                       6.4.1
-tqdm                                          4.66.4
-typing_extensions                             4.12.1
-typing-inspect                                0.9.0
-tzdata                                        2024.1
-urllib3                                       2.2.1
-waitress                                      3.0.0
-watchdog                                      4.0.1
-Werkzeug                                      3.0.3
-wrapt                                         1.16.0
-yarl                                          1.9.4
-zipp                                          3.19.2
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.1
+altair==5.3.0
+aniso8601==9.0.1
+annotated-types==0.7.0
+anyio==4.4.0
+async-timeout==4.0.3
+attrs==23.2.0
+azure-ai-vision-imageanalysis==1.0.0b2
+azure-cognitiveservices-vision-computervision==0.9.0
+azure-common==1.1.28
+azure-core==1.30.2
+azure-cosmos==4.7.0
+azure-identity==1.16.1
+azure-search==1.0.0b2
+azure-search-documents==11.4.0
+azure-storage-blob==12.20.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+colorama==0.4.6
+contourpy==1.2.1
+cryptography==42.0.8
+cycler==0.12.1
+dataclasses-json==0.6.7
+Deprecated==1.2.14
+distro==1.9.0
+docker==7.1.0
+entrypoints==0.4
+exceptiongroup==1.2.1
+faiss-cpu==1.8.0
+Flask==3.0.3
+fonttools==4.53.0
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+graphene==3.3
+graphql-core==3.2.3
+graphql-relay==3.2.0
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+importlib_metadata==7.1.0
+isodate==0.6.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+langchain==0.2.3
+langchain-community==0.2.4
+langchain-core==0.2.5
+langchain-text-splitters==0.2.1
+langsmith==0.1.77
+Mako==1.3.5
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib==3.9.0
+mdurl==0.1.2
+mlflow==2.13.2
+msal==1.28.1
+msal-extensions==1.1.0
+msrest==0.7.1
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.26.4
+oauthlib==3.2.2
+openai==1.33.0
+opencv-python==4.10.0.82
+opentelemetry-api==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
+orjson==3.10.4
+packaging==23.2
+pandas==2.2.2
+pillow==10.3.0
+pip==23.0.1
+portalocker==2.8.2
+protobuf==4.25.3
+pyarrow==15.0.2
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+pywin32==306
+PyYAML==6.0.1
+querystring-parser==1.2.4
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.18.1
+scikit-learn==1.5.0
+scipy==1.13.1
+setuptools==65.5.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.30
+sqlparse==0.5.0
+streamlit==1.35.0
+tenacity==8.3.0
+threadpoolctl==3.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+typing_extensions==4.12.1
+typing-inspect==0.9.0
+tzdata==2024.1
+urllib3==2.2.1
+waitress==3.0.0
+watchdog==4.0.1
+Werkzeug==3.0.3
+wrapt==1.16.0
+yarl==1.9.4
+zipp==3.19.2
